# chat-app-cpp

./: .gitignore  CMakeLists.txt  README.md
src/client/: GUI.cpp  TCPClient.cpp  TCPClient.h  client.cpp
src/common/: constants.h  socket.cpp  socket.h  socket_utils.cpp  socket_utils.h
src/common/models/: Client.cpp  Message.cpp  Message.h
src/common/models/message/: ChatMessage.h  Message.h  Messages.h
src/server/: CommnadHandler.cpp  TCPServer.cpp  handleClient.cpp  handleClient.h  server.cpp
